--- a/fileUpload.html
+++ b/fileUpload.html
@@ -7,8 +7,8 @@
 <body>
 <form action="fileCheck.php" method="post" enctype="multipart/form-data">
     <label>Upload a file</label>
-    <input name="file" type="file">
-    <button type="submit" onclick="myFunc()">Submit</button>
+    <input name="file" id="fileInput" type="file">
+    <button type="submit" name="uploadButton" id="uploadButton" onclick="myFunc()">Submit</button>
 </form>
 </body>
 </html>
